# source/Sopheon.CloudNative.Environments/Sopheon.CloudNative.Environments.Functions/Functions/GetResourceUrisByBusinessServiceDependency.cs
@@ -9,11 +9,10 @@ using Microsoft.Azure.Functions.Worker.Http;
 using Microsoft.Azure.WebJobs.Extensions.OpenApi.Core.Attributes;
 using Microsoft.Azure.WebJobs.Extensions.OpenApi.Core.Enums;
 using Microsoft.Extensions.Logging;
-using Sopheon.CloudNative.Environments.Domain.Models;
 using Sopheon.CloudNative.Environments.Domain.Queries;
 using Sopheon.CloudNative.Environments.Functions.Helpers;
+using Sopheon.CloudNative.Environments.Functions.Models;
 using Sopheon.CloudNative.Environments.Functions.Validators;
-using Environment = Sopheon.CloudNative.Environments.Domain.Models.Environment;
 
 namespace Sopheon.CloudNative.Environments.Functions
 {
@@ -54,12 +53,12 @@ namespace Sopheon.CloudNative.Environments.Functions
          Summary = StringConstants.RESPONSE_SUMMARY_200,
          Description = StringConstants.RESPONSE_DESCRIPTION_200)]
       [OpenApiResponseWithBody(statusCode: HttpStatusCode.BadRequest,
-         contentType: StringConstants.CONTENT_TYPE_TEXT_PLAIN,
+         contentType: StringConstants.CONTENT_TYPE_APP_JSON,
          bodyType: typeof(string),
          Summary = StringConstants.RESPONSE_SUMMARY_400,
          Description = StringConstants.RESPONSE_DESCRIPTION_400)]
       [OpenApiResponseWithBody(statusCode: HttpStatusCode.InternalServerError,
-         contentType: StringConstants.CONTENT_TYPE_TEXT_PLAIN,
+         contentType: StringConstants.CONTENT_TYPE_APP_JSON,
          bodyType: typeof(string),
          Summary = StringConstants.RESPONSE_SUMMARY_500,
          Description = StringConstants.RESPONSE_DESCRIPTION_500)]
@@ -76,8 +75,13 @@ namespace Sopheon.CloudNative.Environments.Functions
 
             if (!validationResultBusinessServiceName.IsValid || !validationResultDependencyname.IsValid)
             {
+               ExceptionDto exception = new ExceptionDto
+               {
+                  StatusCode = (int)HttpStatusCode.BadRequest,
+                  Message = StringConstants.RESPONSE_REQUEST_PATH_PARAMETER_INVALID,
+               };
                logger.LogInformation(StringConstants.RESPONSE_REQUEST_PATH_PARAMETER_INVALID);
-               return await _responseBuilder.BuildWithStringBody(req, HttpStatusCode.BadRequest, StringConstants.RESPONSE_REQUEST_PATH_PARAMETER_INVALID);
+               return await _responseBuilder.BuildWithJsonBody(req, HttpStatusCode.BadRequest, exception);
             }
 
             IEnumerable<string> resourceUris = await _environmentQueries.GetResourceUrisByBusinessServiceDependency(businessServiceName, dependencyName);
@@ -86,8 +90,13 @@ namespace Sopheon.CloudNative.Environments.Functions
          }
          catch (Exception ex)
          {
+            ExceptionDto exception = new ExceptionDto
+            {
+               StatusCode = (int)HttpStatusCode.InternalServerError,
+               Message = StringConstants.RESPONSE_GENERIC_ERROR,
+            };
             logger.LogInformation($"{ex.GetType()} : {ex.Message}");
-            return await _responseBuilder.BuildWithStringBody(req, HttpStatusCode.InternalServerError, StringConstants.RESPONSE_GENERIC_ERROR);
+            return await _responseBuilder.BuildWithJsonBody(req, HttpStatusCode.InternalServerError, exception);
          }
       }
    }
