# source/Sopheon.CloudNative.Environments/Sopheon.CloudNative.Environments.Functions/Functions/GetSpecificResourceUri.cs
@@ -11,6 +11,7 @@ using Microsoft.OpenApi.Models;
 using Sopheon.CloudNative.Environments.Domain.Exceptions;
 using Sopheon.CloudNative.Environments.Domain.Queries;
 using Sopheon.CloudNative.Environments.Functions.Helpers;
+using Sopheon.CloudNative.Environments.Functions.Models;
 
 namespace Sopheon.CloudNative.Environments.Functions
 {
@@ -50,22 +51,22 @@ namespace Sopheon.CloudNative.Environments.Functions
          Description = "The name of the BusinessServiceDependency",
          Summary = "The name of the BusinessServiceDependency")]
       [OpenApiResponseWithBody(statusCode: HttpStatusCode.OK,
-         contentType: StringConstants.CONTENT_TYPE_TEXT_PLAIN,
+         contentType: StringConstants.CONTENT_TYPE_APP_JSON,
          bodyType: typeof(string),
          Summary = StringConstants.RESPONSE_SUMMARY_200,
          Description = StringConstants.RESPONSE_DESCRIPTION_200)]
       [OpenApiResponseWithBody(statusCode: HttpStatusCode.NotFound,
-         contentType: StringConstants.CONTENT_TYPE_TEXT_PLAIN,
+         contentType: StringConstants.CONTENT_TYPE_APP_JSON,
          bodyType: typeof(string),
          Summary = StringConstants.RESPONSE_SUMMARY_404,
          Description = StringConstants.RESPONSE_DESCRIPTION_404)]
       [OpenApiResponseWithBody(statusCode: HttpStatusCode.BadRequest,
-         contentType: StringConstants.CONTENT_TYPE_TEXT_PLAIN,
+         contentType: StringConstants.CONTENT_TYPE_APP_JSON,
          bodyType: typeof(string),
          Summary = StringConstants.RESPONSE_SUMMARY_400,
          Description = StringConstants.RESPONSE_DESCRIPTION_400)]
       [OpenApiResponseWithBody(statusCode: HttpStatusCode.InternalServerError,
-         contentType: StringConstants.CONTENT_TYPE_TEXT_PLAIN,
+         contentType: StringConstants.CONTENT_TYPE_APP_JSON,
          bodyType: typeof(string),
          Summary = StringConstants.RESPONSE_SUMMARY_500,
          Description = StringConstants.RESPONSE_DESCRIPTION_500)]
@@ -80,23 +81,38 @@ namespace Sopheon.CloudNative.Environments.Functions
             // TODO, other validation eg minLength?
             if (Guid.Empty.Equals(environmentKey) || string.IsNullOrEmpty(businessServiceName) || string.IsNullOrEmpty(dependencyName))
             {
+               ExceptionDto exception = new ExceptionDto
+               {
+                  StatusCode = (int)HttpStatusCode.BadRequest,
+                  Message = StringConstants.RESPONSE_REQUEST_PATH_PARAMETER_INVALID,
+               };
                logger.LogInformation(StringConstants.RESPONSE_REQUEST_PATH_PARAMETER_INVALID);
-               return await _responseBuilder.BuildWithStringBody(req, HttpStatusCode.BadRequest, StringConstants.RESPONSE_REQUEST_PATH_PARAMETER_INVALID);
+               return await _responseBuilder.BuildWithJsonBody(req, HttpStatusCode.BadRequest, exception);
             }
 
             string resourceUri = await _environmentQueries.GetSpecificResourceUri(environmentKey, businessServiceName, dependencyName);
 
-            return await _responseBuilder.BuildWithStringBody(req, HttpStatusCode.OK, resourceUri);
+            return await _responseBuilder.BuildWithJsonBody(req, HttpStatusCode.OK, resourceUri); //TODO DTO HERE?
          }
          catch (EntityNotFoundException ex)
          {
+            ExceptionDto exception = new ExceptionDto
+            {
+               StatusCode = (int)HttpStatusCode.NotFound,
+               Message = ex.Message,
+            };
             logger.LogInformation(ex.Message);
-            return await _responseBuilder.BuildWithStringBody(req, HttpStatusCode.NotFound, ex.Message);
+            return await _responseBuilder.BuildWithJsonBody(req, HttpStatusCode.NotFound, exception);
          }
          catch (Exception ex)
          {
+            ExceptionDto exception = new ExceptionDto
+            {
+               StatusCode = (int)HttpStatusCode.InternalServerError,
+               Message = StringConstants.RESPONSE_GENERIC_ERROR,
+            };
             logger.LogInformation($"{ex.GetType()} : {ex.Message}");
-            return await _responseBuilder.BuildWithStringBody(req, HttpStatusCode.InternalServerError, StringConstants.RESPONSE_GENERIC_ERROR);
+            return await _responseBuilder.BuildWithJsonBody(req, HttpStatusCode.InternalServerError, StringConstants.RESPONSE_GENERIC_ERROR);
          }
       }
    }
