# source/Sopheon.CloudNative.Environments/Sopheon.CloudNative.Environments.Functions/Models/ExceptionDto.cs
@@ -1,0 +1,17 @@
+﻿namespace Sopheon.CloudNative.Environments.Functions.Models
+{
+   public class ExceptionDto
+   {
+      public int StatusCode
+      {
+         get;
+         set;
+      }
+
+      public string Message
+      {
+         get;
+         set;
+      }
+   }
+}
